# msal_browser_rust

./: .gitignore  Cargo.toml  README.md  build.rs  msal-browser-gobblefunk.js  msal-object-examples.js  package.json  rollup.config.js  run_tests.sh  rustfmt.toml
example/: .gitignore  Cargo.toml  package.json  rollup.config.js
example/src/: lib.rs
js/: msal-browser-gobblefunk.js  msal-browser.js  msal-browser.js.map  msal-object-examples.js
src/: lib.rs  msal.rs  popup.rs  popup_app.rs  redirect.rs  redirect_app.rs  requests.rs  token_claims.rs
