[package]
name = "msal_browser"
version = "0.1.5"
authors = ["Paul Dorehill"]
edition = "2018"
description = "Rust WASM wrapper for msal-browser.js"
license = "MIT"
repository = "https://github.com/pauldorehill/msal_browser_rust"
keywords = ["msal", "wasm", "msal-browser", "oauth", "azure"]
categories = ["authentication", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [ "popup" ]
popup = []
redirect = []

[dependencies]
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
js-sys = "0.3.44"
cfg-if = "0.1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
web-sys = { version = "0.3", features = [ "console"] }

[profile.release]
lto = true
opt-level = "s"