[package]
name = "example"
version = "0.1.0"
authors = ["Paul Dorehill"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.0"
js-sys = "0.3.0"
futures-signals = "0.3.0"
dominator = "0.5.0"
lazy_static = "1.4.0"
msal_browser = { path = "../", features = ["redirect"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"

[profile.release]
lto = true
opt-level = "s"