[package]
name = "example"
version = "0.1.0"
authors = ["Paul Dorehill"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3.0"
futures-signals = "0.3"
dominator = "0.5"
lazy_static = "1.4"
msal_browser = { path = "../", version = "*", features = ["redirect"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
